k8s/base/jlapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jlapp-pedido-deployment
spec:
  selector:
    matchLabels:
      app: jlapp-pedido
  replicas: 1
  template:
    metadata:
      labels:
        app: jlapp-pedido
    spec:
      serviceAccountName: pedido-sa
      containers:
      - name: jlapp-pedido
        image: jlapp-pedido
        ports:
        - containerPort: 8070
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8070
          initialDelaySeconds: 25
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8070
          initialDelaySeconds: 35
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 20
