k8s/base/jlapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jlapp-pedido-service
spec:
  selector:
    app: jlapp-pedido
  ports:
  - port: 8070
    targetPort: 8070
