k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    name: pedido
    port: 8070
    targetPort: 8070
  - protocol: TCP
    name: pagamento
    port: 8072
    targetPort: 8072
  - protocol: TCP
    name: producao
    port: 8074
    targetPort: 8074
  type: LoadBalancer
